<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/joystix_monospace"
        android:gravity="center"
        android:text="@string/pausa"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/joystix_monospace"
        android:gravity="center"
        android:text="@string/pausa_mensaje"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/car1red"
            android:fontFamily="@font/joystix_monospace"
            android:text="@string/cancelar"
            android:shadowColor="@color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnReanudar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/car1blue"
            android:fontFamily="@font/joystix_monospace"
            android:text="@string/aceptar"
            android:shadowColor="@color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>