<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/joystix_monospace"
        android:gravity="center"
        android:text="@string/opciones"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/car1red"
            android:fontFamily="@font/joystix_monospace"
            android:shadowColor="@color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:text="@string/tutorial"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnChangeNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/car1blue"
            android:fontFamily="@font/joystix_monospace"
            android:shadowColor="@color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:text="@string/cambiar_nickname"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/car1red"
            android:fontFamily="@font/joystix_monospace"
            android:shadowColor="@color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:text="@string/cancelar"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>