<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/joystix_monospace"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/layoutStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="left|top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="left|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialogTxtCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/joystix_monospace"
                android:gravity="center"
                android:text="@string/resumen_monedas"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dialogTxtPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/joystix_monospace"
                android:gravity="center"
                android:text="@string/resumen_puntos"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dialogTxtCrashes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/joystix_monospace"
                android:gravity="center"
                android:text="@string/resumen_choques"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/dialogTxtLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/joystix_monospace"
                android:gravity="center"
                android:text="@string/resumen_nivel"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialogTxtCoinsResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/joystix_monospace"
                android:gravity="center"
                android:text="000"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dialogTxtPointsResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/joystix_monospace"
                android:gravity="center"
                android:text="000"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dialogTxtCrashesResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/joystix_monospace"
                android:gravity="center"
                android:text="000"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dialogTxtLevelResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/joystix_monospace"
                android:gravity="center"
                android:text="000"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTerminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/car1red"
            android:fontFamily="@font/joystix_monospace"
            android:shadowColor="@color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:text="@string/terminar"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>